--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="part-four">
         <div class="box">
         <h1 class="apple">A world of entertainment. Available wherever you are.</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit doloremque rem eveniet, tenetur eius consequatur incidunt ut a totam nam nihil facilis nobis asperiores, numquam distinctio error dignissimos. Illum porro aliquid quod et dolorum tenetur eum commodi sapiente, itaque minus suscipit quasi odit sequi quia eveniet, nulla, voluptas optio totam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit doloremque rem eveniet, tenetur eius consequatur incidunt ut a totam nam nihil facilis nobis asperiores, numquam distinctio error dignissimos. Illum porro aliquid quod et dolorum tenetur eum commodi sapiente, itaque minus suscipit quasi odit sequi quia eveniet, nulla, voluptas optio totam.xyz </p>
         </div>
     </div>
 
