--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="part-six">
             <div class="image-two">
                 <div class="ptext">
-                    <h1>EXPERIENCE MAGIC LIKE NEVER BEFORE</h1>
+                    <h1>EXPERIENCE MAGIC LIKE NEVER BEFORE..</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque neque dolorum, illo fugit ipsa voluptatum debitis ex non eum quis perferendis dicta ratione quibusdam! Itaque, culpa. Est architecto provident nostrum.</p>
                 </div>
             </div>
